# hslu-aicomp

./: .gitignore  README.md  pyproject.toml
scripts/: test_script.py
src/map_csmm/: __init__.py  main.py
